--- a/package.json
+++ b/package.json
@@ -1,27 +1,21 @@
 {
-  "name": "weblogin",
-  "version": "1.0.0",
-  "description": "access control based on google app engine",
-  "main": "app.js",
+  "name": "cloudComputing",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eric-xyz/cloudComputing.git"
-  },
-  "keywords": [
-    "AngularJS",
-    "Express",
-    "Node.js"
-  ],
   "dependencies": {
-    "express": "*"
-  },
-  "author": "Eric",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eric-xyz/cloudComputing/issues"
-  },
-  "homepage": "https://github.com/eric-xyz/cloudComputing#readme"
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "~1.15.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "express": "~4.13.4",
+    "jade": "~1.11.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0",
+    "mongoose": "^4.4.1",
+    "passport": "*",
+    "passport-google-oauth": "*"
+  }
 }
